Project2/parser.output
Grammar

    0 $accept: function $end

    1 function: function_header optional_variable body

    2 function_header: FUNCTION IDENTIFIER parameters RETURNS type ';'
    3                | error ';'

    4 optional_variable: optional_variable variable
    5                  | ε

    6 variable: IDENTIFIER ':' type IS statement_
    7         | error ';'

    8 parameters: parameter more_parameters

    9 more_parameters: more_parameters ',' parameter
   10                | ε

   11 parameter: IDENTIFIER ':' type
   12          | ε

   13 type: INTEGER
   14     | REAL
   15     | BOOLEAN

   16 body: BEGIN_ statement_ END ';'

   17 statement_: statement ';'
   18           | error ';'

   19 statement: expression
   20          | REDUCE operator reductions ENDREDUCE
   21          | IF expression THEN statement_ ELSE statement_ ENDIF
   22          | CASE expression IS case_ OTHERS ARROW statement_ ENDCASE

   23 operator: ADDOP
   24         | MULOP

   25 case_: case_ case
   26      | ε

   27 case: WHEN INT_LITERAL ARROW statement_
   28     | error ';'

   29 reductions: reductions statement_
   30           | ε

   31 expression: expression OROP binary
   32           | binary

   33 binary: binary ANDOP relation
   34       | relation

   35 relation: relation RELOP term
   36         | term

   37 term: term ADDOP remop
   38     | remop

   39 remop: remop REMOP factor
   40      | factor

   41 factor: factor MULOP expop
   42       | expop

   43 expop: primary EXPOP notop
   44      | notop

   45 notop: NOTOP primary
   46      | primary

   47 primary: '(' expression ')'
   48        | INT_LITERAL
   49        | REAL_LITERAL
   50        | BOOL_LITERAL
   51        | IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 47
    ')' (41) 47
    ',' (44) 9
    ':' (58) 6 11
    ';' (59) 2 3 7 16 17 18 28
    error (256) 3 7 18 28
    IDENTIFIER (258) 2 6 11 51
    BOOL_LITERAL (259) 50
    INT_LITERAL (260) 27 48
    REAL_LITERAL (261) 49
    BEGIN_ (262) 16
    BOOLEAN (263) 15
    END (264) 16
    ENDREDUCE (265) 20
    FUNCTION (266) 2
    INTEGER (267) 13
    IS (268) 6 22
    REDUCE (269) 20
    RETURNS (270) 2
    ADDOP (271) 23 37
    MULOP (272) 24 41
    RELOP (273) 35
    ANDOP (274) 33
    OROP (275) 31
    NOTOP (276) 45
    REMOP (277) 39
    EXPOP (278) 43
    ARROW (279) 22 27
    CASE (280) 22
    ELSE (281) 21
    ENDCASE (282) 22
    ENDIF (283) 21
    IF (284) 21
    OTHERS (285) 22
    REAL (286) 14
    THEN (287) 21
    WHEN (288) 27


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    function (40)
        on left: 1
        on right: 0
    function_header (41)
        on left: 2 3
        on right: 1
    optional_variable (42)
        on left: 4 5
        on right: 1 4
    variable (43)
        on left: 6 7
        on right: 4
    parameters (44)
        on left: 8
        on right: 2
    more_parameters (45)
        on left: 9 10
        on right: 8 9
    parameter (46)
        on left: 11 12
        on right: 8 9
    type (47)
        on left: 13 14 15
        on right: 2 6 11
    body (48)
        on left: 16
        on right: 1
    statement_ (49)
        on left: 17 18
        on right: 6 16 21 22 27 29
    statement (50)
        on left: 19 20 21 22
        on right: 17
    operator (51)
        on left: 23 24
        on right: 20
    case_ (52)
        on left: 25 26
        on right: 22 25
    case (53)
        on left: 27 28
        on right: 25
    reductions (54)
        on left: 29 30
        on right: 20 29
    expression (55)
        on left: 31 32
        on right: 19 21 22 31 47
    binary (56)
        on left: 33 34
        on right: 31 32 33
    relation (57)
        on left: 35 36
        on right: 33 34 35
    term (58)
        on left: 37 38
        on right: 35 36 37
    remop (59)
        on left: 39 40
        on right: 37 38 39
    factor (60)
        on left: 41 42
        on right: 39 40 41
    expop (61)
        on left: 43 44
        on right: 41 42
    notop (62)
        on left: 45 46
        on right: 43 44
    primary (63)
        on left: 47 48 49 50 51
        on right: 43 45 46


State 0

    0 $accept: • function $end

    error     shift, and go to state 1
    FUNCTION  shift, and go to state 2

    function         go to state 3
    function_header  go to state 4


State 1

    3 function_header: error • ';'

    ';'  shift, and go to state 5


State 2

    2 function_header: FUNCTION • IDENTIFIER parameters RETURNS type ';'

    IDENTIFIER  shift, and go to state 6


State 3

    0 $accept: function • $end

    $end  shift, and go to state 7


State 4

    1 function: function_header • optional_variable body

    $default  reduce using rule 5 (optional_variable)

    optional_variable  go to state 8


State 5

    3 function_header: error ';' •

    $default  reduce using rule 3 (function_header)


State 6

    2 function_header: FUNCTION IDENTIFIER • parameters RETURNS type ';'

    IDENTIFIER  shift, and go to state 9

    $default  reduce using rule 12 (parameter)

    parameters  go to state 10
    parameter   go to state 11


State 7

    0 $accept: function $end •

    $default  accept


State 8

    1 function: function_header optional_variable • body
    4 optional_variable: optional_variable • variable

    error       shift, and go to state 12
    IDENTIFIER  shift, and go to state 13
    BEGIN_      shift, and go to state 14

    variable  go to state 15
    body      go to state 16


State 9

   11 parameter: IDENTIFIER • ':' type

    ':'  shift, and go to state 17


State 10

    2 function_header: FUNCTION IDENTIFIER parameters • RETURNS type ';'

    RETURNS  shift, and go to state 18


State 11

    8 parameters: parameter • more_parameters

    $default  reduce using rule 10 (more_parameters)

    more_parameters  go to state 19


State 12

    7 variable: error • ';'

    ';'  shift, and go to state 20


State 13

    6 variable: IDENTIFIER • ':' type IS statement_

    ':'  shift, and go to state 21


State 14

   16 body: BEGIN_ • statement_ END ';'

    error         shift, and go to state 22
    IDENTIFIER    shift, and go to state 23
    BOOL_LITERAL  shift, and go to state 24
    INT_LITERAL   shift, and go to state 25
    REAL_LITERAL  shift, and go to state 26
    REDUCE        shift, and go to state 27
    NOTOP         shift, and go to state 28
    CASE          shift, and go to state 29
    IF            shift, and go to state 30
    '('           shift, and go to state 31

    statement_  go to state 32
    statement   go to state 33
    expression  go to state 34
    binary      go to state 35
    relation    go to state 36
    term        go to state 37
    remop       go to state 38
    factor      go to state 39
    expop       go to state 40
    notop       go to state 41
    primary     go to state 42


State 15

    4 optional_variable: optional_variable variable •

    $default  reduce using rule 4 (optional_variable)


State 16

    1 function: function_header optional_variable body •

    $default  reduce using rule 1 (function)


State 17

   11 parameter: IDENTIFIER ':' • type

    BOOLEAN  shift, and go to state 43
    INTEGER  shift, and go to state 44
    REAL     shift, and go to state 45

    type  go to state 46


State 18

    2 function_header: FUNCTION IDENTIFIER parameters RETURNS • type ';'

    BOOLEAN  shift, and go to state 43
    INTEGER  shift, and go to state 44
    REAL     shift, and go to state 45

    type  go to state 47


State 19

    8 parameters: parameter more_parameters •
    9 more_parameters: more_parameters • ',' parameter

    ','  shift, and go to state 48

    $default  reduce using rule 8 (parameters)


State 20

    7 variable: error ';' •

    $default  reduce using rule 7 (variable)


State 21

    6 variable: IDENTIFIER ':' • type IS statement_

    BOOLEAN  shift, and go to state 43
    INTEGER  shift, and go to state 44
    REAL     shift, and go to state 45

    type  go to state 49


State 22

   18 statement_: error • ';'

    ';'  shift, and go to state 50


State 23

   51 primary: IDENTIFIER •

    $default  reduce using rule 51 (primary)


State 24

   50 primary: BOOL_LITERAL •

    $default  reduce using rule 50 (primary)


State 25

   48 primary: INT_LITERAL •

    $default  reduce using rule 48 (primary)


State 26

   49 primary: REAL_LITERAL •

    $default  reduce using rule 49 (primary)


State 27

   20 statement: REDUCE • operator reductions ENDREDUCE

    ADDOP  shift, and go to state 51
    MULOP  shift, and go to state 52

    operator  go to state 53


State 28

   45 notop: NOTOP • primary

    IDENTIFIER    shift, and go to state 23
    BOOL_LITERAL  shift, and go to state 24
    INT_LITERAL   shift, and go to state 25
    REAL_LITERAL  shift, and go to state 26
    '('           shift, and go to state 31

    primary  go to state 54


State 29

   22 statement: CASE • expression IS case_ OTHERS ARROW statement_ ENDCASE

    IDENTIFIER    shift, and go to state 23
    BOOL_LITERAL  shift, and go to state 24
    INT_LITERAL   shift, and go to state 25
    REAL_LITERAL  shift, and go to state 26
    NOTOP         shift, and go to state 28
    '('           shift, and go to state 31

    expression  go to state 55
    binary      go to state 35
    relation    go to state 36
    term        go to state 37
    remop       go to state 38
    factor      go to state 39
    expop       go to state 40
    notop       go to state 41
    primary     go to state 42


State 30

   21 statement: IF • expression THEN statement_ ELSE statement_ ENDIF

    IDENTIFIER    shift, and go to state 23
    BOOL_LITERAL  shift, and go to state 24
    INT_LITERAL   shift, and go to state 25
    REAL_LITERAL  shift, and go to state 26
    NOTOP         shift, and go to state 28
    '('           shift, and go to state 31

    expression  go to state 56
    binary      go to state 35
    relation    go to state 36
    term        go to state 37
    remop       go to state 38
    factor      go to state 39
    expop       go to state 40
    notop       go to state 41
    primary     go to state 42


State 31

   47 primary: '(' • expression ')'

    IDENTIFIER    shift, and go to state 23
    BOOL_LITERAL  shift, and go to state 24
    INT_LITERAL   shift, and go to state 25
    REAL_LITERAL  shift, and go to state 26
    NOTOP         shift, and go to state 28
    '('           shift, and go to state 31

    expression  go to state 57
    binary      go to state 35
    relation    go to state 36
    term        go to state 37
    remop       go to state 38
    factor      go to state 39
    expop       go to state 40
    notop       go to state 41
    primary     go to state 42


State 32

   16 body: BEGIN_ statement_ • END ';'

    END  shift, and go to state 58


State 33

   17 statement_: statement • ';'

    ';'  shift, and go to state 59


State 34

   19 statement: expression •
   31 expression: expression • OROP binary

    OROP  shift, and go to state 60

    $default  reduce using rule 19 (statement)


State 35

   32 expression: binary •
   33 binary: binary • ANDOP relation

    ANDOP  shift, and go to state 61

    $default  reduce using rule 32 (expression)


State 36

   34 binary: relation •
   35 relation: relation • RELOP term

    RELOP  shift, and go to state 62

    $default  reduce using rule 34 (binary)


State 37

   36 relation: term •
   37 term: term • ADDOP remop

    ADDOP  shift, and go to state 63

    $default  reduce using rule 36 (relation)


State 38

   38 term: remop •
   39 remop: remop • REMOP factor

    REMOP  shift, and go to state 64

    $default  reduce using rule 38 (term)


State 39

   40 remop: factor •
   41 factor: factor • MULOP expop

    MULOP  shift, and go to state 65

    $default  reduce using rule 40 (remop)


State 40

   42 factor: expop •

    $default  reduce using rule 42 (factor)


State 41

   44 expop: notop •

    $default  reduce using rule 44 (expop)


State 42

   43 expop: primary • EXPOP notop
   46 notop: primary •

    EXPOP  shift, and go to state 66

    $default  reduce using rule 46 (notop)


State 43

   15 type: BOOLEAN •

    $default  reduce using rule 15 (type)


State 44

   13 type: INTEGER •

    $default  reduce using rule 13 (type)


State 45

   14 type: REAL •

    $default  reduce using rule 14 (type)


State 46

   11 parameter: IDENTIFIER ':' type •

    $default  reduce using rule 11 (parameter)


State 47

    2 function_header: FUNCTION IDENTIFIER parameters RETURNS type • ';'

    ';'  shift, and go to state 67


State 48

    9 more_parameters: more_parameters ',' • parameter

    IDENTIFIER  shift, and go to state 9

    $default  reduce using rule 12 (parameter)

    parameter  go to state 68


State 49

    6 variable: IDENTIFIER ':' type • IS statement_

    IS  shift, and go to state 69


State 50

   18 statement_: error ';' •

    $default  reduce using rule 18 (statement_)


State 51

   23 operator: ADDOP •

    $default  reduce using rule 23 (operator)


State 52

   24 operator: MULOP •

    $default  reduce using rule 24 (operator)


State 53

   20 statement: REDUCE operator • reductions ENDREDUCE

    $default  reduce using rule 30 (reductions)

    reductions  go to state 70


State 54

   45 notop: NOTOP primary •

    $default  reduce using rule 45 (notop)


State 55

   22 statement: CASE expression • IS case_ OTHERS ARROW statement_ ENDCASE
   31 expression: expression • OROP binary

    IS    shift, and go to state 71
    OROP  shift, and go to state 60


State 56

   21 statement: IF expression • THEN statement_ ELSE statement_ ENDIF
   31 expression: expression • OROP binary

    OROP  shift, and go to state 60
    THEN  shift, and go to state 72


State 57

   31 expression: expression • OROP binary
   47 primary: '(' expression • ')'

    OROP  shift, and go to state 60
    ')'   shift, and go to state 73


State 58

   16 body: BEGIN_ statement_ END • ';'

    ';'  shift, and go to state 74


State 59

   17 statement_: statement ';' •

    $default  reduce using rule 17 (statement_)


State 60

   31 expression: expression OROP • binary

    IDENTIFIER    shift, and go to state 23
    BOOL_LITERAL  shift, and go to state 24
    INT_LITERAL   shift, and go to state 25
    REAL_LITERAL  shift, and go to state 26
    NOTOP         shift, and go to state 28
    '('           shift, and go to state 31

    binary    go to state 75
    relation  go to state 36
    term      go to state 37
    remop     go to state 38
    factor    go to state 39
    expop     go to state 40
    notop     go to state 41
    primary   go to state 42


State 61

   33 binary: binary ANDOP • relation

    IDENTIFIER    shift, and go to state 23
    BOOL_LITERAL  shift, and go to state 24
    INT_LITERAL   shift, and go to state 25
    REAL_LITERAL  shift, and go to state 26
    NOTOP         shift, and go to state 28
    '('           shift, and go to state 31

    relation  go to state 76
    term      go to state 37
    remop     go to state 38
    factor    go to state 39
    expop     go to state 40
    notop     go to state 41
    primary   go to state 42


State 62

   35 relation: relation RELOP • term

    IDENTIFIER    shift, and go to state 23
    BOOL_LITERAL  shift, and go to state 24
    INT_LITERAL   shift, and go to state 25
    REAL_LITERAL  shift, and go to state 26
    NOTOP         shift, and go to state 28
    '('           shift, and go to state 31

    term     go to state 77
    remop    go to state 38
    factor   go to state 39
    expop    go to state 40
    notop    go to state 41
    primary  go to state 42


State 63

   37 term: term ADDOP • remop

    IDENTIFIER    shift, and go to state 23
    BOOL_LITERAL  shift, and go to state 24
    INT_LITERAL   shift, and go to state 25
    REAL_LITERAL  shift, and go to state 26
    NOTOP         shift, and go to state 28
    '('           shift, and go to state 31

    remop    go to state 78
    factor   go to state 39
    expop    go to state 40
    notop    go to state 41
    primary  go to state 42


State 64

   39 remop: remop REMOP • factor

    IDENTIFIER    shift, and go to state 23
    BOOL_LITERAL  shift, and go to state 24
    INT_LITERAL   shift, and go to state 25
    REAL_LITERAL  shift, and go to state 26
    NOTOP         shift, and go to state 28
    '('           shift, and go to state 31

    factor   go to state 79
    expop    go to state 40
    notop    go to state 41
    primary  go to state 42


State 65

   41 factor: factor MULOP • expop

    IDENTIFIER    shift, and go to state 23
    BOOL_LITERAL  shift, and go to state 24
    INT_LITERAL   shift, and go to state 25
    REAL_LITERAL  shift, and go to state 26
    NOTOP         shift, and go to state 28
    '('           shift, and go to state 31

    expop    go to state 80
    notop    go to state 41
    primary  go to state 42


State 66

   43 expop: primary EXPOP • notop

    IDENTIFIER    shift, and go to state 23
    BOOL_LITERAL  shift, and go to state 24
    INT_LITERAL   shift, and go to state 25
    REAL_LITERAL  shift, and go to state 26
    NOTOP         shift, and go to state 28
    '('           shift, and go to state 31

    notop    go to state 81
    primary  go to state 82


State 67

    2 function_header: FUNCTION IDENTIFIER parameters RETURNS type ';' •

    $default  reduce using rule 2 (function_header)


State 68

    9 more_parameters: more_parameters ',' parameter •

    $default  reduce using rule 9 (more_parameters)


State 69

    6 variable: IDENTIFIER ':' type IS • statement_

    error         shift, and go to state 22
    IDENTIFIER    shift, and go to state 23
    BOOL_LITERAL  shift, and go to state 24
    INT_LITERAL   shift, and go to state 25
    REAL_LITERAL  shift, and go to state 26
    REDUCE        shift, and go to state 27
    NOTOP         shift, and go to state 28
    CASE          shift, and go to state 29
    IF            shift, and go to state 30
    '('           shift, and go to state 31

    statement_  go to state 83
    statement   go to state 33
    expression  go to state 34
    binary      go to state 35
    relation    go to state 36
    term        go to state 37
    remop       go to state 38
    factor      go to state 39
    expop       go to state 40
    notop       go to state 41
    primary     go to state 42


State 70

   20 statement: REDUCE operator reductions • ENDREDUCE
   29 reductions: reductions • statement_

    error         shift, and go to state 22
    IDENTIFIER    shift, and go to state 23
    BOOL_LITERAL  shift, and go to state 24
    INT_LITERAL   shift, and go to state 25
    REAL_LITERAL  shift, and go to state 26
    ENDREDUCE     shift, and go to state 84
    REDUCE        shift, and go to state 27
    NOTOP         shift, and go to state 28
    CASE          shift, and go to state 29
    IF            shift, and go to state 30
    '('           shift, and go to state 31

    statement_  go to state 85
    statement   go to state 33
    expression  go to state 34
    binary      go to state 35
    relation    go to state 36
    term        go to state 37
    remop       go to state 38
    factor      go to state 39
    expop       go to state 40
    notop       go to state 41
    primary     go to state 42


State 71

   22 statement: CASE expression IS • case_ OTHERS ARROW statement_ ENDCASE

    $default  reduce using rule 26 (case_)

    case_  go to state 86


State 72

   21 statement: IF expression THEN • statement_ ELSE statement_ ENDIF

    error         shift, and go to state 22
    IDENTIFIER    shift, and go to state 23
    BOOL_LITERAL  shift, and go to state 24
    INT_LITERAL   shift, and go to state 25
    REAL_LITERAL  shift, and go to state 26
    REDUCE        shift, and go to state 27
    NOTOP         shift, and go to state 28
    CASE          shift, and go to state 29
    IF            shift, and go to state 30
    '('           shift, and go to state 31

    statement_  go to state 87
    statement   go to state 33
    expression  go to state 34
    binary      go to state 35
    relation    go to state 36
    term        go to state 37
    remop       go to state 38
    factor      go to state 39
    expop       go to state 40
    notop       go to state 41
    primary     go to state 42


State 73

   47 primary: '(' expression ')' •

    $default  reduce using rule 47 (primary)


State 74

   16 body: BEGIN_ statement_ END ';' •

    $default  reduce using rule 16 (body)


State 75

   31 expression: expression OROP binary •
   33 binary: binary • ANDOP relation

    ANDOP  shift, and go to state 61

    $default  reduce using rule 31 (expression)


State 76

   33 binary: binary ANDOP relation •
   35 relation: relation • RELOP term

    RELOP  shift, and go to state 62

    $default  reduce using rule 33 (binary)


State 77

   35 relation: relation RELOP term •
   37 term: term • ADDOP remop

    ADDOP  shift, and go to state 63

    $default  reduce using rule 35 (relation)


State 78

   37 term: term ADDOP remop •
   39 remop: remop • REMOP factor

    REMOP  shift, and go to state 64

    $default  reduce using rule 37 (term)


State 79

   39 remop: remop REMOP factor •
   41 factor: factor • MULOP expop

    MULOP  shift, and go to state 65

    $default  reduce using rule 39 (remop)


State 80

   41 factor: factor MULOP expop •

    $default  reduce using rule 41 (factor)


State 81

   43 expop: primary EXPOP notop •

    $default  reduce using rule 43 (expop)


State 82

   46 notop: primary •

    $default  reduce using rule 46 (notop)


State 83

    6 variable: IDENTIFIER ':' type IS statement_ •

    $default  reduce using rule 6 (variable)


State 84

   20 statement: REDUCE operator reductions ENDREDUCE •

    $default  reduce using rule 20 (statement)


State 85

   29 reductions: reductions statement_ •

    $default  reduce using rule 29 (reductions)


State 86

   22 statement: CASE expression IS case_ • OTHERS ARROW statement_ ENDCASE
   25 case_: case_ • case

    error   shift, and go to state 88
    OTHERS  shift, and go to state 89
    WHEN    shift, and go to state 90

    case  go to state 91


State 87

   21 statement: IF expression THEN statement_ • ELSE statement_ ENDIF

    ELSE  shift, and go to state 92


State 88

   28 case: error • ';'

    ';'  shift, and go to state 93


State 89

   22 statement: CASE expression IS case_ OTHERS • ARROW statement_ ENDCASE

    ARROW  shift, and go to state 94


State 90

   27 case: WHEN • INT_LITERAL ARROW statement_

    INT_LITERAL  shift, and go to state 95


State 91

   25 case_: case_ case •

    $default  reduce using rule 25 (case_)


State 92

   21 statement: IF expression THEN statement_ ELSE • statement_ ENDIF

    error         shift, and go to state 22
    IDENTIFIER    shift, and go to state 23
    BOOL_LITERAL  shift, and go to state 24
    INT_LITERAL   shift, and go to state 25
    REAL_LITERAL  shift, and go to state 26
    REDUCE        shift, and go to state 27
    NOTOP         shift, and go to state 28
    CASE          shift, and go to state 29
    IF            shift, and go to state 30
    '('           shift, and go to state 31

    statement_  go to state 96
    statement   go to state 33
    expression  go to state 34
    binary      go to state 35
    relation    go to state 36
    term        go to state 37
    remop       go to state 38
    factor      go to state 39
    expop       go to state 40
    notop       go to state 41
    primary     go to state 42


State 93

   28 case: error ';' •

    $default  reduce using rule 28 (case)


State 94

   22 statement: CASE expression IS case_ OTHERS ARROW • statement_ ENDCASE

    error         shift, and go to state 22
    IDENTIFIER    shift, and go to state 23
    BOOL_LITERAL  shift, and go to state 24
    INT_LITERAL   shift, and go to state 25
    REAL_LITERAL  shift, and go to state 26
    REDUCE        shift, and go to state 27
    NOTOP         shift, and go to state 28
    CASE          shift, and go to state 29
    IF            shift, and go to state 30
    '('           shift, and go to state 31

    statement_  go to state 97
    statement   go to state 33
    expression  go to state 34
    binary      go to state 35
    relation    go to state 36
    term        go to state 37
    remop       go to state 38
    factor      go to state 39
    expop       go to state 40
    notop       go to state 41
    primary     go to state 42


State 95

   27 case: WHEN INT_LITERAL • ARROW statement_

    ARROW  shift, and go to state 98


State 96

   21 statement: IF expression THEN statement_ ELSE statement_ • ENDIF

    ENDIF  shift, and go to state 99


State 97

   22 statement: CASE expression IS case_ OTHERS ARROW statement_ • ENDCASE

    ENDCASE  shift, and go to state 100


State 98

   27 case: WHEN INT_LITERAL ARROW • statement_

    error         shift, and go to state 22
    IDENTIFIER    shift, and go to state 23
    BOOL_LITERAL  shift, and go to state 24
    INT_LITERAL   shift, and go to state 25
    REAL_LITERAL  shift, and go to state 26
    REDUCE        shift, and go to state 27
    NOTOP         shift, and go to state 28
    CASE          shift, and go to state 29
    IF            shift, and go to state 30
    '('           shift, and go to state 31

    statement_  go to state 101
    statement   go to state 33
    expression  go to state 34
    binary      go to state 35
    relation    go to state 36
    term        go to state 37
    remop       go to state 38
    factor      go to state 39
    expop       go to state 40
    notop       go to state 41
    primary     go to state 42


State 99

   21 statement: IF expression THEN statement_ ELSE statement_ ENDIF •

    $default  reduce using rule 21 (statement)


State 100

   22 statement: CASE expression IS case_ OTHERS ARROW statement_ ENDCASE •

    $default  reduce using rule 22 (statement)


State 101

   27 case: WHEN INT_LITERAL ARROW statement_ •

    $default  reduce using rule 27 (case)
